# shift-schedule-savior

./: Cargo.toml  README.md  index.html  src-1285218ba96d8f80.js  src-1285218ba96d8f80_bg.wasm  src-2fe8501274150d21.js  src-2fe8501274150d21_bg.wasm  src-6e92d6898150d3db.js  src-6e92d6898150d3db_bg.wasm  src-7e943e4ee19f49b8.js  src-7e943e4ee19f49b8_bg.wasm  src-92325106094501cf.js  src-92325106094501cf_bg.wasm  src-b254458ba07d1b93.js  src-b254458ba07d1b93_bg.wasm  src-cba6da4b952344b7.js  src-cba6da4b952344b7_bg.wasm  src-d8eb301ef1c786a3.js  src-d8eb301ef1c786a3_bg.wasm  src-de6854e825c2e612.js  src-de6854e825c2e612_bg.wasm  src-e3a5edbf5aa992c2.js  src-e3a5edbf5aa992c2_bg.wasm  src-e58f0eaf0fe21451.js  src-e58f0eaf0fe21451_bg.wasm  src-edcff1ea06121aed.js  src-edcff1ea06121aed_bg.wasm  src-f34d63e9d0fa05ba.js  src-f34d63e9d0fa05ba_bg.wasm  src-f7a39eea7b791a00.js  src-f7a39eea7b791a00_bg.wasm  src-f83a02556d3787b6.js  src-f83a02556d3787b6_bg.wasm  src-fbaa675f4521a1fc.js  src-fbaa675f4521a1fc_bg.wasm  tailwind-8d41fa21023a4490.css  tailwind.config.js
.github/workflows/: deploy.yml
components/: card.rs
crates/: timeframe.rs
pages/: .gitignore  README.md  index.html  tailwind.config.js
pages/components/: button.rs  header.rs  tab.rs
pages/crates/: ga.rs
pages/src/: app.rs  components.rs  crates.rs  main.rs
public/: tailwind.css
snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: app.rs  lib.rs  main.rs
src/components/: button.rs  card.rs  footer.rs  form.rs  tab.rs  table.rs
src/crates/: employee.rs  solve.rs  weekday.rs
(+5 files in other folders)
