[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.20"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
wasm-logger = "0.2.0"
